manifests/apps/code-server/code-server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: apps
  labels:
    app: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: code-server
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: code-server
          image: codercom/code-server:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: workspace
              mountPath: /home/coder/workspace
            - name: workspace
              mountPath: /home/coder/.local/share/code-server
              subPath: .code-server-profile/local-share-code-server
            - name: workspace
              mountPath: /home/coder/.config
              subPath: .code-server-profile/config-home
            - name: workspace
              mountPath: /home/coder/.cache
              subPath: .code-server-profile/cache-home
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: code-server-workspace

---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: apps
spec:
  selector:
    app: code-server
  ports:
    - port: 8080

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`code.kwe2.org`)
      kind: Rule
      services:
        - name: code-server
          port: 8080
  tls: {}
